@@ -11,6 +11,14 @@
 #
 ###########################################################################
 
+if [ -z ${MGICONFIG} ]
+then
+        MGICONFIG=/usr/local/mgi/live/mgiconfig
+        export MGICONFIG
+fi
+
+. ${MGICONFIG}/master.config.sh
+
 usage ()
 {
     echo "Usage: runMcvQC input_file"
@@ -19,14 +27,13 @@ usage ()
     exit 1
 }
 
-MCVLOADDIR=/usr/local/mgi/live/dataload/mcvload
-WRAPPER=${MCVLOADDIR}/bin/mcvQC.sh
+WRAPPER=${MCVLOAD}/bin/mcvQC.sh
 
 #
 # The mcvload product is not installed on all servers, so make sure
 # it exists on this one.
 #
-if [ ! -d ${MCVLOADDIR} ]
+if [ ! -d ${MCVLOAD} ]
 then
     echo "The mcvload software does not exist on this server"; exit 1
 fi
